inou/prp/tests/errors/concat_fail_field_after_inline.prp
/*
:name: concat_fail_field_after_inline
:type: error
:error: duplicate|already exists|already declared|overlap|exists
*/

// A field introduced by inline concat expansion cannot be introduced again by
// an explicit field in the same tuple literal.
// Doc: ../docs/docs/pyrope/03-bundle.md `...` triggers a compile error if the same entry already exists.

const a = (const x=1,const y=2)
const bad = (...a, const x=0) // locate_error_here
